# Tortoisecoin

./: .cirrus.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  libtortoisecoinkernel.pc.in  vcpkg.json
.github/: ci-test-each-commit-exec.sh
.tx/: config
ci/: lint_imagefile  lint_run.sh  lint_run_all.sh
cmake/: ccache.cmake  crc32c.cmake  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  tests.cmake  tortoisecoin-build-config.h.in
contrib/: README.md  valgrind.supp
depends/: Makefile  README.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  REST-interface.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  productivity.md  psbt.md  reduce-memory.md  release-notes-31278.md  release-notes-empty-template.md  release-notes.md  release-process.md  tor.md  tortoisecoin-conf.md  tracing.md  translation_process.md  (+2 more)
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addrdb.h  (+151 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
(+1576 files in other folders)
